// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component renders horizontal with title correctly 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
    role="separator"
  >
    <span
      class="ant-divider-inner-text"
    >
      Some text
    </span>
  </div>
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;

exports[`Divider Component renders horizontal without title correctly 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;

exports[`Divider Component renders vertical correctly 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-vertical"
    role="separator"
  />
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;
